main router 연결 및 자동로그인 구현 중

--- a/public/css/login.scss
+++ b/public/css/login.scss
@@ -22,7 +22,8 @@
         margin: 0 auto 50px;
       }
       .login-id,
-      .login-pw {
+      .login-pw,
+      .login-name {
         width: 310px;
         font-size: 15px;
         color: #fff;
