--- a/views/login.ejs
+++ b/views/login.ejs
@@ -33,7 +33,6 @@
     <script defer src="/js/login.js"></script>
     <!-- main css -->
     <link rel="stylesheet" href="/css/style.css" />
-    <!-- <link rel="stylesheet" href="/css/media.css" /> -->
     <!-- favicon -->
     <link rel="icon" href="/img/favicon.png" />
     
@@ -50,10 +49,9 @@
           <input type="text" placeholder="아이디" class="login-id" name="id"/>
           <br/>
           <input type="password" placeholder="비밀번호" class="login-pw" name="password" />
+          <div class="allText">Welcome NETFLIX MUSIC !</div>
           <input type="submit" class="login-btn" value="로그인"/>
         </form>
-        <div class="allText">Welcome! HERE IS NETFLIX MUSIC</div>
-        
         <div class="login-checkBox">
           <p>
             <input type="checkbox" id="check1">
