--- a/public/css/login.css
+++ b/public/css/login.css
@@ -25,7 +25,8 @@
   margin: 0 auto 50px;
 }
 .login-wrap .left .login-box .login-id,
-.login-wrap .left .login-box .login-pw {
+.login-wrap .left .login-box .login-pw,
+.login-wrap .left .login-box .login-name {
   width: 310px;
   font-size: 15px;
   color: #fff;
