--- a/views/main.ejs
+++ b/views/main.ejs
@@ -10,21 +10,7 @@
     <!-- Jquery -->
     <script defer src="https://code.jquery.com/jquery-3.6.3.js" integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM=" crossorigin="anonymous"></script>
 
-    <!-- Open Graph -->
-    <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Netflix Music" />
-    <meta property="og:title" content="Netflix Music" />
-    <meta property="og:description" content="넷플릭스 음악 시장에 도전하다" />
-    <meta property="og:image" content="./favicon.png" />
-    <meta property="og:url" content="" />
-    <!-- Twitter Card -->
-    <meta property="twitter:type" content="website" />
-    <meta property="twiter:sitename" content="Netflix Music" />
-    <meta property="twitter:title" content="Netflix Music"/>
-    <meta property="twitter:description" content="넷플릭스 음악 시장에 도전하다" />
-    <meta property="twitter:image" content="./favicon.png" />
-    <meta property="twitter:url" content="" />
-
+    <!-- favicon -->
     <link rel="icon" href="/favicon.png" />
     
     <!-- FontAwsome -->
@@ -194,160 +180,21 @@
           <!-- Swiper -->
           <div class="swiper bannerSwiper">
             <div class="swiper-wrapper">
+              <% for (let i=0; i<data.length; i++) { %>
               <div class="swiper-slide mvslide">
-                <div class="video__container">
-                  <video src="./MV/NewJeans OMG.mp4" class="video_scope mv"></video>
-                </div>
                 <div class="banner-box">
                   <input type="checkbox" name="ddd">
-                  <h1 class="main-banner-title">NewJeans 'OMG'</h1>
-                  <span>NewJeans</span>
+                  <h1 class="main-banner-title"><%= data[i].TITLE%></h1>
+                  <span><%= data[i].SINGER %></span>
                   <p>
-                    첫 겨울을 맞이하는 NewJeans의 새 앨범 “OMG”는 조금은 묘한
-                    거리감,<br />
-                    조금은 낯선 배경 속에서 다시 한번 관계를 이야기한다. 그리고
-                    그 안에 특별하고 의미 있는 선물을 담아내고 있다.<br />
-                    1st.EP “New Jeans”에서 담아냈던, 사람의 관계와 끌림에 대해
-                    이야기하며 함께 있을 때 더 빛나는 10대 소녀들이<br />
-                    들려주는 '우리'라는 서사는 모습을 바꿔가며 또 한 번
-                    펼쳐진다. 낯섦을 지나 공감, 환대, 호혜에 기반을 둘 때,<br />
-                    '우리'는 더 가까워지고, 함께 성장한다고 믿는다.
+                    <%= data[i].CONTENT %>
                   </p>
                   <div class="btn-box">
                     <button class="btn btn--detail">상세 보기</button>
                   </div>
-                  <!-- 뮤트 온-오프 버튼 -->
-                  <div class="muted-control-container">
-                    <div class="circle-deco sound-up-deco on">
-                      <span class="material-symbols-outlined sound-up">volume_up</span>
-                    </div>
-                    <div class="circle-deco sound-muted-deco">
-                      <span class="material-symbols-outlined sound-muted">volume_off</span>
-                    </div>
-                  </div>
-                  <!-- 리플레이버튼 -->
-                  <div class="replay-control-container">
-                    <div class="circle-deco replay-deco">
-                        <span class="material-symbols-outlined" id="replay__btn">replay</span>
-                    </div>
-                  </div>
                 </div>
               </div>
-              <div class="swiper-slide mvslide">
-                <div class="video__container">
-                  <video src="./MV/TNX  Love or Die MV.mp4" class="video_scope mv"></video>
-                </div>
-                <div class="banner-box">
-                  <h1 class="main-banner-title">Love Never Dies</h1>
-                  <span>TNX</span>
-                  <p>
-                    TNX는 리더 최태훈을 필두로, 우경준, 장현수, 천준혁, 은휘,
-                    오성준까지 6명의 멤버로 구성된 보이그룹으로,<br />
-                    ‘감성과 강성이 공존하는 퍼포먼스로 동세대와 함께 용기를 내서
-                    도전하고, 극복하며 성장해나갈 새로운 여섯명’이라는<br />
-                    그룹의 의미처럼 앞으로 그들이 추구 할 신선하고 다채로운
-                    음악에 대한 의지를 담았다.
-                  </p>
-                  <div class="btn-box">
-                    <button class="btn btn--detail">상세 보기</button>
-                  </div>
-                  <!-- 뮤트 온-오프 버튼 -->
-                  <div class="muted-control-container">
-                    <div class="circle-deco sound-up-deco on">
-                      <span class="material-symbols-outlined sound-up">volume_up</span>
-                    </div>
-                    <div class="circle-deco sound-muted-deco">
-                      <span class="material-symbols-outlined sound-muted">volume_off</span>
-                    </div>
-                  </div>
-                  <!-- 리플레이버튼 -->
-                  <div class="replay-control-container">
-                    <div class="circle-deco replay-deco">
-                     <replay class="material-symbols-outlined" id="replay__btn">replay</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="swiper-slide mvslide">
-                <div class="video__container">
-                  <video src="./MV/Sam Smith Unholy MV.mp4" class="video_scope mv"></video>
-                </div>
-                <div class="banner-box">
-                  <h1 class="main-banner-title">Unholy</h1>
-                  <span>Sam Smith, Kim Petras</span>
-                  <p>
-                    더 이상 ‘Stay with me’ 시절의 샘 스미스가 아니다. 그들은 1집
-                    시절 만들어진 자신에 대한 고정관념을 과격히 깨부수길 원한다.
-                    <br />
-                    렉트로닉 음악을 발표하는 등 파격 행보를 걷더니 이번엔 수위가
-                    한층 높다. 사운드와 가사 양면에서 지금까지 발표한 곡들 중
-                    가장 도발적이다. <br />
-                    어둡고 금속성 강한 소리를 사용했으며 불경함 속에서 환희를
-                    느끼는 분위기를 연출했다. 가장 그들답지 않은 시도지만
-                    뮤지션으로서의 만족도는 <br />
-                    높았다고 한다. “가장 창의적인 시도를 한 곡이다. 정말
-                    재미있게 만들었다”고 말했다. 미국 LA 선셋 스트립의 클럽 바디
-                    샵에서 영감을 받아 만들었다고 한다. <br />
-                    가사에도 “바디 샵”이 등장한다.
-                  </p>
-                  <div class="btn-box">
-                    <button class="btn btn--detail">상세 보기</button>
-                  </div>
-                  <!-- 뮤트 온-오프 버튼 -->
-                  <div class="muted-control-container">
-                    <div class="circle-deco sound-up-deco on">
-                      <span class="material-symbols-outlined sound-up">volume_up</span>
-                    </div>
-                    <div class="circle-deco sound-muted-deco">
-                      <span class="material-symbols-outlined sound-muted">volume_off</span>
-                    </div>
-                  </div>
-                  <!-- 리플레이버튼 -->
-                  <div class="replay-control-container">
-                    <div class="circle-deco replay-deco">
-                     <replay class="material-symbols-outlined" id="replay__btn">replay</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="swiper-slide mvslide">
-                <div class="video__container">
-                  <video src="./MV/Charlie Puth Left And Right MV.mp4" class="video_scope mv"></video>
-                </div>
-                <div class="banner-box">
-                  <h1 class="main-banner-title">CHARLIE</h1>
-                  <span>Charlie Puth</span>
-                  <p>
-                    편곡적으로 흠잡을 곳이 없는 작품이지만, 기존의 찰리 푸스
-                    음악에 비해 새롭게 느껴지는 지점이 없어 약간의 아쉬움도
-                    남습니다.<br />
-                    다만 사랑과 이별을 대하는 아티스트의 입체적인 모습을 엿볼 수
-                    있고, 그동안 소셜 미디어를 통해 제작 과정을 공개하고 소통해
-                    온 만큼<br />
-                    팬들의 입장에서 더욱 가깝게 느껴지는 앨범이 아닐까 싶은데요.
-                    이번 주는 소울풀한 매력과 위트가 돋보이는 앨범을
-                    추천드립니다.
-                  </p>
-                  <div class="btn-box">
-                    <button class="btn btn--detail">상세 보기</button>
-                  </div>
-                  <!-- 뮤트 온-오프 버튼 -->
-                  <div class="muted-control-container">
-                    <div class="circle-deco sound-up-deco on">
-                      <span class="material-symbols-outlined sound-up">volume_up</span>
-                    </div>
-                    <div class="circle-deco sound-muted-deco">
-                      <span class="material-symbols-outlined sound-muted">volume_off</span>
-                    </div>
-                  </div>
-                  <!-- 리플레이버튼 -->
-                  <div class="replay-control-container">
-                    <div class="circle-deco replay-deco">
-                     <replay class="material-symbols-outlined" id="replay__btn">replay</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
+              <% } %>
             </div>
             <!-- Swiper buttn -->
             <div class="swiper-button-next"></div>
